welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:4: error: '=>' expected but 'case' found.
    case (a,b) if estEntre(40,50,a)&&estEntre(40,50,b)==>true
    ^